# flowstate

./: .env.example  .gitignore  PYPI_OVERVIEW.md  README.md  SKILLS.md  ml.py  pyproject.toml  requirements.txt  vector_db.py
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 69a8f4f217c7_initial_schema.py  db8bf0cac6d6_add_graph_snapshots.py
automation/: trigger.py
backend/: main.py  ml.py  slack_bot.py  vector_db.py  worker.py
backend/enrichment/: __init__.py  duplicates.py
backend/extraction/: extractor.py
backend/governance/: router.py
backend/hybrid_architecture/: hybrid_memory.py
backend/preprocessing/: utils.py
flowstate/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  ml.py  models.py  release.py  slack_app.py  slack_bot.py  vector_db.py
flowstate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flowstate/agent/: __init__.py  loop.py  tools.py
flowstate/connectors/: google_calendar.py  slack.py  whatsapp.py
flowstate/drafting/: __init__.py  generator.py
flowstate/enrichment/: duplicates.py  ownership.py  pipeline.py
flowstate/extraction/: extractor.py
flowstate/governance/: router.py
flowstate/graph/: __init__.py  dag.py  intelligence.py
flowstate/infra/: __init__.py  chroma_client.py  db.py  models.py  redis_client.py  task_store.py
flowstate/preprocessing/: normalizer.py
flowstate/watchers/: __init__.py  base.py  email_watcher.py  file_watcher.py  registry.py  runner.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
inference/: README.md
inference/client/: test.py  test_ollama.sh
inference/ollama/: pull_model.sh  start_server.sh
scripts/: auth_calendar.py  eval.py  run_watchers.py  synthetic_gen.py
