[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowstate"
version = "0.1.0"
description = "Always-on workflow orchestrator with dependency graph intelligence"
readme = { file = "PYPI_OVERVIEW.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
  { name = "Siya", email = "siya1202@gmail.com" },
  { name = "Srishti", email = "pandeysrishti2020@gmail.com" }
]
maintainers = [
  { name = "Siya", email = "siya1202@gmail.com" },
  { name = "Srishti", email = "pandeysrishti2020@gmail.com" }
]
license = "LicenseRef-Proprietary"
keywords = ["workflow", "orchestration", "graph", "automation", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.110",
  "httpx>=0.27",
  "networkx>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "redis>=5.0",
  "requests>=2.31",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
ml = [
  "chromadb>=1.0",
  "sentence-transformers>=3.0"
]
watchers = [
  "PyPDF2>=3.0",
  "pytesseract>=0.3",
  "python-docx>=1.1",
  "pillow>=10.0",
  "google-auth>=2.0",
  "google-auth-oauthlib>=1.2",
  "google-auth-httplib2>=0.2",
  "google-api-python-client>=2.0"
]

[project.scripts]
flowstate = "flowstate.cli:main"
flowstate-agent-loop = "flowstate.agent.loop:main"
flowstate-slack-bot = "flowstate.slack_bot:main"
flowstate-mcp = "flowstate.mcp_server:main"
flowstate-bump-version = "flowstate.release:main"

[project.urls]
Homepage = "https://github.com/srish/flowstate"
Repository = "https://github.com/srish/flowstate"
Documentation = "https://github.com/srish/flowstate#readme"
Issues = "https://github.com/srish/flowstate/issues"
Changelog = "https://github.com/srish/flowstate/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["flowstate*"]
exclude = ["frontend*", "alembic*", "backend*", "scripts*", "automation*"]
